--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
 							<ul class="">
 								<h3>2023</h3>
 								<li>
+									T. Heimel, N. Hütsch, R. Winterhalder, T. Plehn, A. Butter: <br />
+									<b>Precision-Machine Learning for the Matrix Element Method</b><br />
+									<em>To be submitted</em><br />
+									<a href="https://arxiv.org/abs/2310.07752" target="_blank">[ArXiv]</a>
+								</li>
+								<li>
 									S. Dittmaier, P. Maierhöfer, C. Schwan, R. Winterhalder: <br />
 									<b>Like-Sign W-Boson Scattering at the LHC &#8212; Approximations and Full Next-to-Leading-Order Predictions</b><br />
 									<em>Submitted to JHEP</em><br />
