Add MadNIS and journal to VBS

--- a/index.html
+++ b/index.html
@@ -146,16 +146,24 @@
 							<ul class="">
 								<h3>2023</h3>
 								<li>
-									T. Heimel, N. Hütsch, R. Winterhalder, T. Plehn, A. Butter: <br />
-									<b>Precision-Machine Learning for the Matrix Element Method</b><br />
+									T. Heimel, N. Hütsch, F. Maltoni, O. Mattelaer, T. Plehn, R. Winterhalder:<br />
+									<b>The MadNIS Reloaded</b><br />
 									<em>To be submitted</em><br />
+									<a href="https://arxiv.org/abs/2311.01548" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
+									T. Heimel, N. Hütsch, R. Winterhalder, T. Plehn, A. Butter:<br />
+									<b>Precision-Machine Learning for the Matrix Element Method</b><br />
+									<em>Submitted to SciPost</em><br />
 									<a href="https://arxiv.org/abs/2310.07752" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
-									S. Dittmaier, P. Maierhöfer, C. Schwan, R. Winterhalder: <br />
+									S. Dittmaier, P. Maierhöfer, C. Schwan, R. Winterhalder:<br />
 									<b>Like-Sign W-Boson Scattering at the LHC &#8212; Approximations and Full Next-to-Leading-Order Predictions</b><br />
-									<em>Submitted to JHEP</em><br />
+									<em>J. High Energ. Phys. 2023, 22 (2023)</em><br />
+									<a href="https://doi.org/10.1007/JHEP11(2023)022" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2308.16716" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
