--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								<li>
 									S. Dittmaier, P. Maierhöfer, C. Schwan, R. Winterhalder:<br />
 									<b>Like-Sign W-Boson Scattering at the LHC &#8212; Approximations and Full Next-to-Leading-Order Predictions</b><br />
-									<em>J. High Energ. Phys. 2023, 22 (2023)</em><br />
+									<em>JHEP 11 (2023) 022</em><br />
 									<a href="https://doi.org/10.1007/JHEP11(2023)022" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2308.16716" target="_blank">[ArXiv]</a>
 								</li>
