--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 						<p>
 						I am a postdoctoral researcher at the <a href="https://uclouvain.be/en/research-institutes/irmp/cp3" target="_blank"> CP3</a> 
 						in Louvain-la-Neuve.
-						I work on the intersection of particle physics and machine learning. My research
-						aims to fully establish data-driven techniques in high-energy physics and to
-						enhance standard simulation methods with (generative) neural networks.
-						Additionally, my interests extend to simulation-based inference, which is crucially dependend
-						on first-principle simulations provided by theory.
+						I work at the intersection of particle physics and machine learning. 
+						My research aims to fully establish data-driven techniques in high-energy physics 
+						and to enhance standard simulation methods with (generative) neural networks. 
+						Additionally, my interests extend to simulation-based inference, which is crucially 
+						dependent on first-principle simulations provided by theory, as well as precision calculations.
 						</p>
 
 						<div class="row">
