Add submission to SciPost

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								<li>
 									T. Heimel, N. Hütsch, F. Maltoni, O. Mattelaer, T. Plehn, R. Winterhalder:<br />
 									<b>The MadNIS Reloaded</b><br />
-									<em>To be submitted</em><br />
+									<em>Submitted to SciPost</em><br />
 									<a href="https://arxiv.org/abs/2311.01548" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
