Add diff models

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<ul class="ul-interests">
 								  
 								  <li>Generative models like generative adversarial networks,</br> 
-									normalizing flows and other novel architectures</li>
+									normalizing flows, diffusion models and other novel architectures</li>
 
 								  <li>Monte-Carlo integration and event generation</li>
 
