--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 								<h3>Research interests</h3>
 								<ul class="ul-interests">
 								  
-								  <li>Generative models like GANs,</br> 
-									normalizing flows, diffusion models and other novel architectures</li>
+								  <li>Generative models like GANs, normalizing flows,</br> 
+									diffusion models and other novel architectures</li>
 
 								  <li>Monte-Carlo integration and event generation</li>
 
@@ -144,7 +144,7 @@
 							<p>This is a list of my publications in reverse-chronological order. All authors are listed alphabetically, 
 								following the convention in particle physics. Exceptions occur for some of the papers.</p>
 							<ul class="">
-								<h3>2023</h3>
+								<h3>2024</h3>
 								<li>
 									S. Dittmaier, C. Schwan, R. Winterhalder:<br />
 									<b>Full and approximated NLO predictions for like-sign W-boson scattering at the LHC</b><br />
