Add imperial info

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 									  <p class="institution">University of Freiburg</p>
 									</div>
 								  </li>
+
+								  <li>
+									<i class="fa-li fa fa-graduation-cap"></i>
+									<div class="description">
+									  <p class="course">Imperial College International Diploma, 2016</p>
+									  <p class="institution">
+
+									  Course: <a href="https://www.imperial.ac.uk/study/courses/postgraduate-taught/quantum-fields-fundamental-forces/" target="_blank"><em>Quantum Fields and Fundamental Forces</em></a>
+									  
+									  </p>
+									  <p class="institution">Imperial College London</p>
+									</div>
+								  </li>
 								  
 								  <li>
 									<i class="fa-li fa fa-graduation-cap"></i>
