--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
 							<ul class="">
 								<h3>2024</h3>
 								<li>
+									T. Heimel, O. Mattelaer, T. Plehn, R. Winterhalder:<br />
+									<b>Differentiable MadNIS-Lite</b><br />
+									<em>Submitted to SciPost</em><br />
+									<a href="https://arxiv.org/abs/2408.01486" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
 									S. Dittmaier, C. Schwan, R. Winterhalder:<br />
 									<b>Full and approximated NLO predictions for like-sign W-boson scattering at the LHC</b><br />
 									<em>Proceedings to "Loops and Legs in Quantum Field Theory (LL2024)"</em><br />
@@ -170,7 +177,8 @@
 								<li>
 									T. Heimel, N. Hütsch, F. Maltoni, O. Mattelaer, T. Plehn, R. Winterhalder:<br />
 									<b>The MadNIS Reloaded</b><br />
-									<em>Submitted to SciPost</em><br />
+									<em>SciPost Phys. 17, 023 (2024)</em><br />
+									<a href="https://doi.org/10.21468/SciPostPhys.17.1.023" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2311.01548" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
