--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 							<h2>Biography</h2>
 						</header>
 						<p>
-						I am a postdoctoral researcher at the <a href="https://uclouvain.be/en/research-institutes/irmp/cp3" target="_blank"> CP3</a> 
-						in Louvain-la-Neuve.
+						I am a postdoctoral researcher at <a href="https://tiflab.mi.infn.it" target="_blank"> Tif Lab</a> 
+						at the University of Milan.
 						I work at the intersection of particle physics and machine learning. 
 						My research aims to fully establish data-driven techniques in high-energy physics 
 						and to enhance standard simulation methods with (generative) neural networks. 
@@ -336,11 +336,11 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Centre for Cosmology, Particle Physics and Phenomenology - CP3 <br />
-										Université catholique de Louvain <br />
-										2, Chemin du Cyclotron - Box L7.01.05 <br />
-										B-1348 Louvain-la-Neuve<br />
-										Belgium
+										Physics Department <br />
+										Università degli Studi di Milano <br />
+										Via Celoria 16<br />
+										20133 Milan<br />
+										Italy
 									</li>
 								</ul>
 							</div>
@@ -348,7 +348,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:ramon.winterhalder@uclouvain.be">ramon.winterhalder@uclouvain.be</a>
+										<a href="mailto:ramon.winterhalder@unimi.it">ramon.winterhalder@unimi.it</a>
 									</li>
 								</ul>
 							</div>
